--- a/Code/samplePlotsAndInterimResults/test_new_dataSC64pos.ipynb
+++ b/Code/samplePlotsAndInterimResults/test_new_dataSC64pos.ipynb
@@ -365,7 +365,7 @@
     "    }\n",
     "    out_df = out_df._append(pd.Series(new_row), ignore_index=True)\n",
     "\n",
-    "out_df.to_csv(outputSaveBasePath + 'positive_result.csv', index=False)"
+    "out_df.to_csv(outputSaveBasePath + 'positive_result_sc_pam120_stride64.csv', index=False)"
    ]
   },
   {
